Fixed alignment with Header and Hero

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -14,9 +14,9 @@
 
 .header {
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    
+    padding: 0 80px;
 }
 
 .logo-title {
